tutorials/2_nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3 # run 3 pods matching the template​
  selector:
    matchLabels:
      app: nginx   # <- label
  template:
    metadata:
      labels:
        app: nginx # <- label
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
